--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -1,9 +1,31 @@
 ﻿<Application x:Class="Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Client"
-             StartupUri="MainWindow.xaml">
+             xmlns:viewmodels="clr-namespace:Client.ViewModels"
+             xmlns:views="clr-namespace:Client.Views"
+             xmlns:local="clr-namespace:Client">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/Common.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewmodels:HomeViewModel}">
+                <views:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:TeamsViewModel}">
+                <views:TeamsView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:CreateViewModel}">
+                <views:CreateView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:CalendarViewModel}">
+                <views:CalendarView/>
+            </DataTemplate>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
