login and register window

--- a/Client/Styles/Common.xaml
+++ b/Client/Styles/Common.xaml
@@ -4,9 +4,11 @@
     <!-- Colors -->
     <Color x:Key="ColorAPrimary1">#FFFFEAC4</Color>
     <Color x:Key="ColorAPrimary2">#FFCB997E</Color>
+    <Color x:Key="ColorAPrimary3">#FFFFFFFF</Color>
 
     <!-- Brushes -->
     <SolidColorBrush x:Key="BrushPrimary1" Color="{StaticResource ColorAPrimary1}" />
     <SolidColorBrush x:Key="BrushPrimary2" Color="{StaticResource ColorAPrimary2}" />
+    <SolidColorBrush x:Key="BrushPrimary3" Color="{StaticResource ColorAPrimary3}" />
 
 </ResourceDictionary>
