--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -26,6 +26,14 @@
                 <views:CalendarView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
+                <views:LoginView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
+                <views:RegisterView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
