--- a/Client/Controls/NavigationView.xaml
+++ b/Client/Controls/NavigationView.xaml
@@ -8,6 +8,10 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="100">
     <Grid Height="450" Background="{StaticResource BrushPrimary1}">
+        <Grid.Resources>
+            <Style BasedOn="{StaticResource NavigationButton}" TargetType="Button" />
+        </Grid.Resources>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition Height="50" />
@@ -17,14 +21,21 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="1" Content="Home" Margin="13" Background="{x:Null}" BorderThickness="0"
-                Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Home}" />
-        <Button Grid.Row="2" Content="Teams" Margin="13" Background="{x:Null}" BorderThickness="0"
-                Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Teams}" />
-        <Button Grid.Row="3" Content="Create" Margin="13" Background="{x:Null}" BorderThickness="0"
-                Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Create}" />
-        <Button Grid.Row="4" Content="Calendar" Margin="13" Background="{x:Null}" BorderThickness="0"
-                Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Calendar}" />
+        <Button Grid.Row="1" Content="Home" 
+                Command="{Binding UpdateCurrentViewModelCommand}" 
+                CommandParameter="{x:Static nav:ViewType.Home}" />
+
+        <Button Grid.Row="2" Content="Teams"
+                Command="{Binding UpdateCurrentViewModelCommand}" 
+                CommandParameter="{x:Static nav:ViewType.Teams}" />
+
+        <Button Grid.Row="3" Content="Create"
+                Command="{Binding UpdateCurrentViewModelCommand}" 
+                CommandParameter="{x:Static nav:ViewType.Create}" />
+
+        <Button Grid.Row="4" Content="Calendar"
+                Command="{Binding UpdateCurrentViewModelCommand}" 
+                CommandParameter="{x:Static nav:ViewType.Calendar}" />
 
     </Grid>
 </UserControl>
