--- a/Client/Views/LoginView.xaml
+++ b/Client/Views/LoginView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Client.Views"
+             xmlns:nav="clr-namespace:Client.State.Navigators"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              FontSize="15">
@@ -32,8 +33,8 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" Margin="20"
-                       HorizontalAlignment="Center" 
-                       Text="Planning Poker" 
+                       HorizontalAlignment="Center"
+                       Text="Planning Poker"
                        FontSize="35" />
 
             <Grid Grid.Row="1" Margin="10">
@@ -46,21 +47,24 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" 
-                           Text="Email" 
+                <TextBlock Grid.Row="0" Grid.Column="0"
+                           Text="Email"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="0" Grid.Column="1" 
-                         Text="tu zrobic wiazanie" 
-                         Margin="10" />
+                <TextBox Grid.Row="0" Grid.Column="1"
+                         Text="tu zrobic wiazanie"
+                         Margin="10" 
+                         Name="EmailTextBox"/>
 
-                <TextBlock Grid.Row="1" Grid.Column="0" 
-                           Text="Password" 
+                <TextBlock Grid.Row="1" Grid.Column="0"
+                           Text="Password"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="1" Grid.Column="1" 
-                         Text="tu drugie wiazanie" 
-                         Margin="10" />
+                <!-- Dorobic banding -->
+                <PasswordBox Grid.Row="1" Grid.Column="1"
+                             Margin="10"
+                             Password="cos" 
+                             Name="PasswordBoxPassword"/>
             </Grid>
 
             <Button Grid.Row="2" Margin="85,5"
@@ -70,9 +74,9 @@
                     Background="{x:Null}"
                     BorderThickness="0" />
 
-            <Button Grid.Row="3" Margin="50, 7" 
+            <Button Grid.Row="3" Margin="50, 7"
                     Content="Login"
-                    Padding="6" 
+                    Padding="6"
                     Background="{StaticResource BrushPrimary2}" />
 
         </Grid>
