--- a/Client/Views/RegisterView.xaml
+++ b/Client/Views/RegisterView.xaml
@@ -1,10 +1,11 @@
 ﻿<UserControl x:Class="Client.Views.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Client.Views"
-             mc:Ignorable="d" 
+             xmlns:nav="clr-namespace:Client.State.Navigators"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              FontSize="15">
 
@@ -31,9 +32,9 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Margin="20" 
-                       HorizontalAlignment="Center" 
-                       Text="Planning Poker" 
+            <TextBlock Grid.Row="0" Margin="20"
+                       HorizontalAlignment="Center"
+                       Text="Planning Poker"
                        FontSize="35" />
 
             <Grid Grid.Row="1" Margin="10">
@@ -48,37 +49,43 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" 
-                           Text="Username" 
+                <TextBlock Grid.Row="0" Grid.Column="0"
+                           Text="Username"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="0" Grid.Column="1" 
-                         Text="tu zrobic wiazanie" 
-                         Margin="10" />
+                <TextBox Grid.Row="0" Grid.Column="1"
+                         Text="tu zrobic wiazanie"
+                         Margin="10"
+                         Name="UserNameTextBox" />
 
-                <TextBlock Grid.Row="1" Grid.Column="0" 
-                           Text="Email" 
+                <TextBlock Grid.Row="1" Grid.Column="0"
+                           Text="Email"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="1" Grid.Column="1" 
-                         Text="tu zrobic wiazanie" 
-                         Margin="10" />
+                <TextBox Grid.Row="1" Grid.Column="1"
+                         Text="tu zrobic wiazanie"
+                         Margin="10"
+                         Name="EmailTextBox" />
 
-                <TextBlock Grid.Row="2" Grid.Column="0" 
-                           Text="Password" 
+                <TextBlock Grid.Row="2" Grid.Column="0"
+                           Text="Password"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="2" Grid.Column="1" 
-                         Text="tu drugie wiazanie" 
-                         Margin="10" />
+                <!-- Dorobic banding -->
+                <PasswordBox Grid.Row="2" Grid.Column="1"
+                             Margin="10"
+                             Password=""
+                             Name="PasswordBoxPassword" />
 
-                <TextBlock Grid.Row="3" Grid.Column="0" 
-                           Text="Confirm Password" 
+                <TextBlock Grid.Row="3" Grid.Column="0"
+                           Text="Confirm Password"
                            VerticalAlignment="Center" />
 
-                <TextBox Grid.Row="3" Grid.Column="1" 
-                         Text="tu drugie wiazanie" 
-                         Margin="10" />
+                <!-- Dorobic banding -->
+                <PasswordBox Grid.Row="3" Grid.Column="1"
+                             Margin="10"
+                             Password=""
+                             Name="ConfirmPasswordBoxPassword" />
             </Grid>
 
             <Button Grid.Row="2" Margin="85,5"
@@ -88,10 +95,11 @@
                     Background="{x:Null}"
                     BorderThickness="0" />
 
-            <Button Grid.Row="3" Margin="50, 7" 
+            <Button Grid.Row="3" Margin="50, 7"
                     Content="Create Account"
-                    Padding="6" 
-                    Background="{StaticResource BrushPrimary2}" />
+                    Padding="6"
+                    Background="{StaticResource BrushPrimary2}"
+                    Click="CreateAccountButtonClick" />
 
         </Grid>
     </Border>
