--- a/Client/Views/RegisterView.xaml
+++ b/Client/Views/RegisterView.xaml
@@ -16,7 +16,7 @@
         <SolidColorBrush Color="{StaticResource ColorAPrimary1 }" />
     </UserControl.Background>
 
-    <Border Margin="15" Padding="30"
+    <Border Margin="15" Padding="10"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Background="{StaticResource BrushPrimary3}"
@@ -93,7 +93,8 @@
                     FontSize="10"
                     Foreground="DodgerBlue"
                     Background="{x:Null}"
-                    BorderThickness="0" />
+                    BorderThickness="0"
+                    Click="LoginButtonClick" />
 
             <Button Grid.Row="3" Margin="50, 7"
                     Content="Create Account"
