--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -3,10 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewmodels="clr-namespace:Client.ViewModels"
              xmlns:views="clr-namespace:Client.Views"
+             xmlns:teams="clr-namespace:Client.ViewModels.Teams"
+             xmlns:teams1="clr-namespace:Client.Views.Teams"
              xmlns:local="clr-namespace:Client">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+
                 <ResourceDictionary Source="/Styles/Common.xaml"/>
                 <ResourceDictionary Source="/Styles/NavigationButton.xaml"/>
                 <ResourceDictionary Source="/Styles/CalendarStyle.xaml"/>
@@ -21,19 +27,23 @@
             </DataTemplate>
 
             <DataTemplate DataType="{x:Type viewmodels:JoinTeamModel}">
-                <views:CreateView/>
+                <views:JoinTeamView/>
             </DataTemplate>
 
             <DataTemplate DataType="{x:Type viewmodels:CalendarViewModel}">
                 <views:CalendarView/>
             </DataTemplate>
 
-            <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
-                <views:LoginView/>
+            <DataTemplate DataType="{x:Type teams:CreateViewModel}">
+                <teams1:CreateView/>
             </DataTemplate>
-
-            <DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
-                <views:RegisterView/>
+            
+            <DataTemplate DataType="{x:Type teams:MeetingsViewModel}">
+                <teams1:MeetingsView/>
+            </DataTemplate>
+            
+            <DataTemplate DataType="{x:Type teams:ResultsViewModel}">
+                <teams1:ResultsView/>
             </DataTemplate>
 
         </ResourceDictionary>
