--- a/Client/Controls/NavigationView.xaml
+++ b/Client/Controls/NavigationView.xaml
@@ -7,36 +7,48 @@
              xmlns:nav="clr-namespace:Client.State.Navigators"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="100"
-             Background="{StaticResource BrushPrimary1}">
-    <Grid Height="450" >
-        <Grid.Resources>
-            <Style BasedOn="{StaticResource NavigationButton}" TargetType="Button" />
-        </Grid.Resources>
+             Background="{StaticResource MahApps.Brushes.Accent}">
+    <Grid>
+        <!-- <Grid.Resources> -->
+        <!--     <Style BasedOn="{StaticResource MahApps.Styles.Button.Square.Accent}" TargetType="Button" /> -->
+        <!-- </Grid.Resources> -->
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="100" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="1" Content="Home" Background="{Binding CurrentViewModel}"
-                Command="{Binding UpdateCurrentViewModelCommand}" 
-                CommandParameter="{x:Static nav:ViewType.Home}" />
+        <Button Grid.Row="1" Content="Home"
+                Command="{Binding UpdateCurrentViewModelCommand}"
+                CommandParameter="{x:Static nav:ViewType.Home}"
+                Background="{StaticResource MahApps.Brushes.Accent}"
+                Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
+                BorderThickness="0" />
 
         <Button Grid.Row="2" Content="Teams"
-                Command="{Binding UpdateCurrentViewModelCommand}" 
-                CommandParameter="{x:Static nav:ViewType.Teams}" />
+                Command="{Binding UpdateCurrentViewModelCommand}"
+                CommandParameter="{x:Static nav:ViewType.Teams}"
+                Background="{StaticResource MahApps.Brushes.Accent}"
+                Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
+                BorderThickness="0" />
 
         <Button Grid.Row="3" Content="Join Team"
-                Command="{Binding UpdateCurrentViewModelCommand}" 
-                CommandParameter="{x:Static nav:ViewType.Create}" />
+                Command="{Binding UpdateCurrentViewModelCommand}"
+                CommandParameter="{x:Static nav:ViewType.Join}"
+                Background="{StaticResource MahApps.Brushes.Accent}"
+                Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
+                BorderThickness="0" />
 
         <Button Grid.Row="4" Content="Calendar"
-                Command="{Binding UpdateCurrentViewModelCommand}" 
-                CommandParameter="{x:Static nav:ViewType.Calendar}" />
+                Command="{Binding UpdateCurrentViewModelCommand}"
+                CommandParameter="{x:Static nav:ViewType.Calendar}"
+                Background="{StaticResource MahApps.Brushes.Accent}"
+                Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
+                BorderThickness="0" />
 
     </Grid>
 </UserControl>
