--- a/Client/Views/TeamsView.xaml
+++ b/Client/Views/TeamsView.xaml
@@ -4,9 +4,43 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.Views"
+             xmlns:controls="clr-namespace:Client.Controls.Teams"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="{StaticResource MahApps.Brushes.Accent4}">
     <Grid>
-        <TextBlock Text="Teams" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0" BorderThickness="2">
+            <TreeView Name="TeamsTreeView">
+                <TreeViewItem >
+
+                </TreeViewItem>
+
+            </TreeView>
+        </Border>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <controls:MeetingNavigation Grid.Row="0" DataContext="{Binding NavigatorTeam}"/>
+
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <ContentControl  Content="{Binding NavigatorTeam.CurrentViewModel}" />
+            </ScrollViewer>
+        </Grid>
+
+
+        
+
+
+
     </Grid>
 </UserControl>
